--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(optParams)
 export(optParamsParallel)
 export(scaDAdatasetFromMatrix)
 export(shrinkDisp)
+export(shrinkDispParallel)
 import(Seurat)
 import(Signac)
 import(methods)
